Spacing Fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ hr {
     }
 
     html, body {
-        margin: 5%;
+        margin: 1%;
     }
 
     h1 {
